[gd_scene load_steps=2 format=3 uid="uid://bl5citskhi3ji"]

[ext_resource type="Script" path="res://card/card.gd" id="1_rhrm2"]

[node name="Card" type="Node2D"]
script = ExtResource("1_rhrm2")
id = 0

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="TitleLable" type="Label" parent="."]
offset_left = -75.0
offset_top = -6.0
offset_right = 75.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ContextLabel" type="Label" parent="."]
offset_left = -55.0
offset_top = 15.0
offset_right = 55.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="EffectScript" type="Node" parent="."]
